[gd_scene load_steps=7 format=3 uid="uid://24rx1xopqqrv"]

[ext_resource type="Script" uid="uid://gqm3f8mtgyof" path="res://assets/scripts/towers/cauldron_tower.gd" id="1_uoh5i"]
[ext_resource type="PackedScene" uid="uid://dw40cmtrt8qw0" path="res://assets/3D assets/tower.blend" id="2_5vs04"]
[ext_resource type="PackedScene" uid="uid://6ku42vxt6y3f" path="res://assets/scenes/projectiles/cauldron_splash.tscn" id="2_vmgpg"]
[ext_resource type="PackedScene" uid="uid://dls216ngqyqkm" path="res://assets/3D assets/bucket.blend" id="3_uoh5i"]

[sub_resource type="BoxShape3D" id="BoxShape3D_chvo0"]
size = Vector3(2.8, 7.5, 2.8)

[sub_resource type="SphereShape3D" id="SphereShape3D_et1c7"]

[node name="CauldronTower" type="StaticBody3D" groups=["tower"]]
script = ExtResource("1_uoh5i")
splash_radius_vision_offset = 2.0
damage = 4.0
firing_speed = 2.0
tower_Attack_Visual = ExtResource("2_vmgpg")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31, 0, -1.31)

[node name="Tower" parent="Pivot" instance=ExtResource("2_5vs04")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.36919, 0, 1.21323)

[node name="TowerBodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19209e-07, 3.752, 1.19209e-07)
shape = SubResource("BoxShape3D_chvo0")

[node name="TowerHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.75, 0)

[node name="bucket" parent="TowerHead" instance=ExtResource("3_uoh5i")]

[node name="FiringTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area3D" parent="." groups=["enemy"]]

[node name="AttackShape" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_et1c7")
debug_color = Color(0.918557, 0, 0.222529, 1)

[node name="SplashSource" type="Node3D" parent="."]

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
radius = 2.5
affect_navigation_mesh = true
carve_navigation_mesh = true

[connection signal="timeout" from="FiringTimer" to="." method="_on_firing_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
